# ferry-web

./: .gitignore  README.md  default.nix  ferry-web.cabal  ferry-web.nix  pkgs.nix  stack.nix  stack.yaml
.github/workflows/: main.yml
src/: Lib.hs  Timetable.hs
src/Control/Monad/: Cache.hs
src/Data/: Cache.hs  LocalCache.hs  MemoryCache.hs
src/Render/: DaysName.hs  Html.hs  Lang.hs
src/Render/Page/: Detail.hs  Index.hs  Metadata.hs  RawTimetable.hs
src/Render/Template/: Ferry.hs  RawTimetable.hs  Route.hs  Timetable.hs  Wrapper.hs
src/Schedule/: Calendar.hs  Finder.hs
src/Scraping/: Calendar.hs  Class.hs  EmailDecode.hs  Gov.hs  Utility.hs
src/Scraping/CoralSea/: SaiWanHoKwunTong.hs  SaiWanHoSamKaTsuen.hs  SamKaTsuenTungLungIsland.hs  TimeString.hs  Timetable.hs
src/Scraping/CoralSea/SaiWanHoKwunTong/: Metadata.hs  Timetable.hs
src/Scraping/CoralSea/SaiWanHoSamKaTsuen/: Metadata.hs  Timetable.hs
src/Scraping/CoralSea/SamKaTsuenTungLungIsland/: Timetable.hs
src/Scraping/Gov/: AberdeenSokKwuWan.hs  CentralCheungChau.hs  CentralDiscoveryBay.hs  CentralMuiWo.hs  CentralPengChau.hs  CentralSokKwuWan.hs  CentralYungShueWan.hs  MaWanTsuenWan.hs  NorthPointHungHom.hs  PengChauHeiLingChau.hs  TimeString.hs
src/Scraping/Gov/NorthPointHungHom/: Timetable.hs
src/Scraping/Gov/NorthPointKowloonCity/: Timetable.hs
src/Scraping/GovData/: AberdeenSokKwuWan.hs  CentralCheungChau.hs  CentralDiscoveryBay.hs  CentralMuiWo.hs  CentralPengChau.hs  CentralSokKwuWan.hs  CentralYungShueWan.hs  Csv.hs  MaWanTsuenWan.hs  PengChauHeiLingChau.hs  TimeString.hs
src/Scraping/GovData/AberdeenSokKwuWan/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralCheungChau/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralDiscoveryBay/: Timetable.hs
src/Scraping/GovData/CentralMaWan/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralMuiWo/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralPengChau/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralSokKwuWan/: Metadata.hs  Timetable.hs
src/Scraping/GovData/CentralYungShueWan/: Metadata.hs  Timetable.hs
src/Scraping/GovData/MaWanTsuenWan/: Metadata.hs  Timetable.hs
src/Scraping/GovData/NorthPointHungHom/: Metadata.hs
src/Scraping/GovData/NorthPointKowloonCity/: Metadata.hs
src/Scraping/GovData/PengChauHeiLingChau/: Metadata.hs  Timetable.hs
src/Scraping/Islands/: AberdeenSokKwuWan.hs  CentralCheungChau.hs  CentralDiscoveryBay.hs  CentralMuiWo.hs  CentralPengChau.hs  CentralSokKwuWan.hs  CentralYungShueWan.hs  CheungChau.hs  MaWanTsuenWan.hs  MuiWo.hs  PengChau.hs  PengChauHeiLingChau.hs  SokKwuWan.hs  YungShueWan.hs
src/Scraping/NWFF/: NorthPointHungHom.hs  NorthPointKowloonCity.hs  RouteScript.hs  TimeString.hs
src/Scraping/NWFF/NorthPointHungHom/: Metadata.hs  Timetable.hs
src/Scraping/NWFF/NorthPointKowloonCity/: Metadata.hs  Timetable.hs
src/Timetable/: Class.hs  Local.hs  Metadata.hs  Raw.hs
static/: style.css
test/Scraping/CoralSea/: TimeStringSpec.hs
test/Scraping/Gov/: TimeStringSpec.hs
test/Scraping/NWFF/: TimeStringSpec.hs
