name:                ferry-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/b123400/ferry-web#readme
license:             BSD3
license-file:        LICENSE
author:              b123400
maintainer:          i@b123400.net
copyright:           GPLv3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Timetable
                     , Render.Html
  other-modules:       Render.Template.Wrapper
                     , Render.Template.Route
                     , Render.Template.Timetable
                     , Render.Template.Ferry
                     , Render.Template.RawTimetable
                     , Render.Page.Index
                     , Render.Page.Detail
                     , Render.Page.RawTimetable
                     , Schedule.Calendar
                     , Schedule.Finder
                     , Control.Monad.Cache
                     , Scraping.Utility
                     , Scraping.Calendar
                     , Scraping.Gov
                     , Scraping.EmailDecode
                     , Timetable.Local
                     , Timetable.Raw
                     , Scraping.Islands.CentralCheungChau
                     , Scraping.Islands.CentralMuiWo
                     , Scraping.Islands.CentralPengChau
                     , Scraping.Islands.CentralSokKwuWan
                     , Scraping.Islands.CentralYungShueWan
                     , Scraping.NWFF.RouteScript
                     , Scraping.NWFF.NorthPointHungHom
                     , Scraping.NWFF.TimeString
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , regex-tdfa
                     , xml-conduit
                     , time
                     , text
                     , bytestring
                     , html-conduit
                     , http-conduit
                     , lucid
                     , http-media
                     , raw-strings-qq
                     , parsec
                     , transformers
                     , exceptions
                     , directory
                     , containers
                     , lens
                     , cache
                     , clock
                     , http-api-data
                     , utf8-string
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , FlexibleContexts
                    , DataKinds
                    , KindSignatures
                    , ScopedTypeVariables
                    , PolyKinds
                    , FunctionalDependencies
                    , AllowAmbiguousTypes
                    , UndecidableInstances
                    , ConstraintKinds

executable ferry-web-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ferry-web
  default-language:    Haskell2010

test-suite ferry-web-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ferry-web
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b123400/ferry-web
