name:                ferry-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/b123400/ferry-web#readme
license:             BSD3
license-file:        LICENSE
author:              b123400
maintainer:          i@b123400.net
copyright:           GPLv3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Timetable
                     , Scraping.CoralSea.TimeString
                     , Scraping.Gov.TimeString
  other-modules:       Render.Html
                     , Render.Template.Wrapper
                     , Render.Template.Route
                     , Render.Template.Timetable
                     , Render.Template.Ferry
                     , Render.Template.RawTimetable
                     , Render.Page.Index
                     , Render.Page.Detail
                     , Render.Page.RawTimetable
                     , Render.Page.Metadata
                     , Render.Lang
                     , Render.DaysName
                     , Schedule.Calendar
                     , Schedule.Finder
                     , Control.Monad.Cache
                     , Scraping.Utility
                     , Scraping.Calendar
                     , Scraping.Gov
                     , Scraping.EmailDecode
                     , Timetable.Local
                     , Timetable.Raw
                     , Timetable.Metadata
                     , Timetable.Class
                     , Scraping.Gov.CentralCheungChau
                     , Scraping.Gov.CentralMuiWo
                     , Scraping.Gov.CentralPengChau
                     , Scraping.Gov.CentralSokKwuWan
                     , Scraping.Gov.CentralYungShueWan
                     , Scraping.Gov.PengChauHeiLingChau
                     , Scraping.Gov.AberdeenSokKwuWan
                     , Scraping.Gov.CentralDiscoveryBay
                     , Scraping.Gov.MaWanTsuenWan
                     , Scraping.Gov.NorthPointHungHom.Timetable
                     , Scraping.Gov.NorthPointKowloonCity.Timetable
                     , Scraping.GovData.Csv
                     , Scraping.GovData.CentralCheungChau.Timetable
                     , Scraping.GovData.CentralCheungChau.Metadata
                     , Scraping.GovData.CentralDiscoveryBay.Timetable
                     , Scraping.GovData.TimeString
                     , Scraping.GovData.CentralMuiWo.Timetable
                     , Scraping.GovData.CentralMuiWo.Metadata
                     , Scraping.GovData.CentralPengChau.Timetable
                     , Scraping.GovData.CentralPengChau.Metadata
                     , Scraping.GovData.CentralSokKwuWan.Timetable
                     , Scraping.GovData.CentralSokKwuWan.Metadata
                     , Scraping.GovData.CentralYungShueWan.Timetable
                     , Scraping.GovData.CentralYungShueWan.Metadata
                     , Scraping.GovData.CentralMaWan.Timetable
                     , Scraping.GovData.CentralMaWan.Metadata
                     , Scraping.GovData.PengChauHeiLingChau.Timetable
                     , Scraping.GovData.PengChauHeiLingChau.Metadata
                     , Scraping.GovData.MaWanTsuenWan.Timetable
                     , Scraping.GovData.MaWanTsuenWan.Metadata
                     , Scraping.GovData.AberdeenSokKwuWan.Timetable
                     , Scraping.GovData.AberdeenSokKwuWan.Metadata
                     , Scraping.GovData.NorthPointHungHom.Metadata
                     , Scraping.GovData.NorthPointKowloonCity.Metadata
                     , Scraping.CoralSea.Timetable
                     , Scraping.CoralSea.SaiWanHoKwunTong.Timetable
                     , Scraping.CoralSea.SaiWanHoKwunTong.Metadata
                     , Scraping.CoralSea.SaiWanHoSamKaTsuen.Timetable
                     , Scraping.CoralSea.SaiWanHoSamKaTsuen.Metadata
                     , Scraping.CoralSea.SamKaTsuenTungLungIsland.Timetable
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , regex-tdfa
                     , xml-conduit
                     , time
                     , text
                     , bytestring
                     , html-conduit
                     , http-conduit
                     , lucid
                     , http-media
                     , raw-strings-qq
                     , parsec
                     , transformers
                     , exceptions
                     , directory
                     , containers
                     , lens
                     , cache
                     , clock
                     , http-api-data
                     , utf8-string
                     , cookie
                     , filepath
                     , cassava
  default-language:    Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , FlexibleContexts
                    , DataKinds
                    , KindSignatures
                    , ScopedTypeVariables
                    , PolyKinds
                    , FunctionalDependencies
                    , AllowAmbiguousTypes
                    , UndecidableInstances
                    , ConstraintKinds
                    , RankNTypes
                    , TypeFamilies
                    , TypeApplications

executable ferry-web-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ferry-web
  default-language:    Haskell2010

test-suite ferry-web-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ferry-web
                     , hspec
                     , aeson
  other-modules:       Scraping.CoralSea.TimeStringSpec
                     , Scraping.Gov.TimeStringSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/b123400/ferry-web
